# Tuple-based-logic

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/inference_rules/: mod.rs
core/src/inference_rules/deduction/: conjunction_introduction.rs  implication_elimination.rs  universal_substitution.rs
core/src/inference_rules/verbatim/: atom_differentiation.rs  atomicity_assertion.rs  mod.rs  tuple_appendation.rs
core/src/queries/: mod.rs  signatures.rs
core/src/structures/: atoms.rs  propositions.rs
core/src/textualizer_formats/: mod.rs
core/src/textualizer_formats/numerical/: mod.rs
core/src/textualizer_formats/plaintext/: mod.rs
tbl/: Cargo.toml
tbl/src/: lib.rs  main.rs
tbl/src/stringifier_formats/numerical/: atom.rs  expression.rs
tbl/src/stringifier_formats/plaintext/: atom.rs  expression.rs  mod.rs  special_cases.rs
tbl/src/stringifiers/: atom.rs  mod.rs  numerical.rs  plaintext.rs  vec.rs
tbl/src/stringifiers/formats/: mod.rs
tbl/src/textualizer_formats/numerical/: atom.rs  expression.rs  mod.rs  special_cases.rs
tbl/src/textualizer_formats/plaintext/: atom.rs  expression.rs  mod.rs  special_cases.rs
tbl/src/textualizers/: mod.rs  numerical.rs  plaintext.rs
tbl_philosophica_core/: Cargo.toml
tbl_philosophica_core/src/: lib.rs
tbl_philosophica_core/src/axioms/: mod.rs
tbl_philosophica_core/src/inference_rules/: mod.rs
tbl_philosophica_core/src/inference_rules/deduction/: conjunction_introduction.rs  implication_elimination.rs  universal_substitution.rs
tbl_philosophica_core/src/inference_rules/verbatim/: atom_differentiation.rs  atomicity_assertion.rs  mod.rs  tuple_appendation.rs  unitarity_assertion.rs
tbl_philosophica_core/src/queries/: mod.rs
tbl_philosophica_core/src/structures/: atoms.rs  expressions.rs  mod.rs  propositions.rs
tbl_philosophica_core/src/textualizer_formats/numerical/: mod.rs
tbl_philosophica_core/src/textualizer_formats/plaintext/: mod.rs  special_cases.rs
tbl_philosophica_core/src/textualizer_formats/typst/: mod.rs
tbl_proof_calculus/: Cargo.toml
tbl_proof_calculus/src/: lib.rs
tbl_proof_calculus/src/expressions/: mod.rs
tbl_proof_calculus/src/expressions/assigned/: mod.rs
tbl_proof_calculus/src/expressions/assignments/: dense.rs  mod.rs  sparse.rs
tbl_proof_calculus/src/expressions/normalised_unassigned/: mod.rs
tbl_proof_calculus/src/generation/: mod.rs
tbl_proof_calculus/src/proof_calculus_derived/: mod.rs
tbl_proof_calculus/src/structures/: mod.rs
tbl_proof_calculus/src/verification/: mod.rs
textualization/: Cargo.toml
textualization/src/: atom.rs  lib.rs
textualization/src/expressions/: raw.rs
textualization/src/helpers/: controlled.rs  lexing.rs  mod.rs  num.rs  string.rs  transformers.rs  vec.rs
textualization/src/structures/: atom.rs  atoms.rs  mod.rs  vec.rs
(+734 files in other folders)
