[package]
name = "tuple_based_logic"
version = "0.1.0"
edition = "2024"

[dependencies]
tbl_verification = { path = "../verification" }
tbl_generation = { path = "../generation" }
tbl_textualization = { path = "../textualization" }
tbl_structures = { path = "../structures" }

bimap = { version = "0.6.3" }
