[package]
name = "tbl_philosophica_core"
version = "0.1.4"
edition = "2024"

[dependencies]
proof_calculus = { path = "../proof_calculus" }
tbl_proof_calculus = { path = "../tbl_proof_calculus" }

bimap = { version = "0.6.3" }
itertools = { version = "0.14.0" }
enum-iterator = { version = "2.1.0" }
