[package]
name = "tbl_proof_calculus"
version = "0.3.1"
edition = "2024"

[dependencies]
path_lib = { path = "../path_lib/core" }
path_lib_proc_macros = { path = "../path_lib/proc_macros" }
proof_calculus = { path = "../proof_calculus" }

trait-aliases = { version = "0.3.0" }
itertools = { version = "0.14.0" }
genawaiter = { version = "0.99.1" }
ref-cast = { version = "1.0.25" }
