[package]
name = "tbl_textualization"
version = "0.1.1"
edition = "2024"

[dependencies]
tbl_structures = { path = "../structures" }

parsertools = { path = "../parsertools" }

bimap = { version = "0.6.3" }
dyn-clone = { version = "1.0.19" }
enum-iterator = { version = "2.1.0" }
either = { version = "1.15.0" }
hashable = { version = "0.0.0" }
