[package]
name = "tbl_textualization"
version = "0.2.0"
edition = "2024"

[features]
default = []
verification = ["dep:tbl_verification"]
generation = ["dep:tbl_generation"]

[dependencies]
tbl_structures = { path = "../structures" }
tbl_verification = { path = "../verification", optional = true }
tbl_generation = { path = "../generation", optional = true }

parsertools = { path = "../parsertools" }

bimap = { version = "0.6.3" }
dyn-clone = { version = "1.0.19" }
enum-iterator = { version = "2.1.0" }
either = { version = "1.15.0" }
hashable = { version = "0.0.0" }
